# rsi

./: Cargo.toml  LICENSE  README.md  eurusd.csv  ohlc.csv  output.csv
src/: helper.rs  lib.rs  main.rs  output.csv  rsi.rs  test.rs
